sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_2_sample_1_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_2_sample_1_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │ 3   ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║ 3 4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
  deductions:
    - "r0c1: delete candidate 3, because of: "
    - "r1c2: delete candidate 3, r1c3: delete candidate 3, because of: "
    - "r1c2: delete candidate 3, r2c2: delete candidate 3, because of: "
    - "r1c3: delete candidate 3, r2c3: delete candidate 3, because of: "
    - "r2c2: delete candidate 3, r2c3: delete candidate 3, because of: "
    - "r3c0: delete candidate 3, because of: "
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │     ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║     │     ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║     │   4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║   4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons: []
    actions:
      - position:
          row: 0
          column: 1
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 1
          column: 3
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 1
          column: 3
        deleteCandidates:
          - 3
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 3
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 3
          column: 0
        deleteCandidates:
          - 3
