sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_2_sample_2_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_2_sample_2_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║   2 │   2 ║     │     ║
    - ║     │     ║  1  │     ║
    - ║ 3   │     ║     │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │ 1 2 ║   2 │     ║
    - ║  4  │     ║     │     ║
    - ║     │     ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║ 1   │ 1   ║     │     ║
    - ║     │     ║     │  2  ║
    - ║     │   4 ║ 3 4 │     ║
    - ║─────┼─────║─────┼─────║
    - ║ 1 2 │     ║     │ 1   ║
    - ║     │  3  ║     │     ║
    - ║     │     ║   4 │   4 ║
    - ╚═══════════╩═══════════╝
  deductions:
    - "r0c0: delete candidate 2, because of: r0c1: candidate 2"
    - "r0c0: delete candidate 2, r1c1: delete candidate 2, because of: r0c1: candidate 2"
    - "r0c3: delete candidate 3, because of: r1c3: candidate 3"
    - "r0c3: delete candidate 3, r1c2: delete candidate 3, because of: r1c3: candidate 3"
    - "r1c1: delete candidate 2, because of: r0c1: candidate 2"
    - "r1c2: delete candidate 3, because of: r1c3: candidate 3"
    - "r2c1: delete candidate 1, because of: r2c0: candidate 1"
    - "r2c1: delete candidate 1, r3c0: delete candidate 1, because of: r2c0: candidate 1"
    - "r2c2: delete candidate 4, because of: r3c2: candidate 4"
    - "r2c2: delete candidate 4, r3c3: delete candidate 4, because of: r3c2: candidate 4"
    - "r3c0: delete candidate 1, because of: r2c0: candidate 1"
    - "r3c3: delete candidate 4, because of: r3c2: candidate 4"
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║     │     ║  1  │     ║
    - ║ 3   │     ║     │   4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │ 1   ║   2 │     ║
    - ║  4  │     ║     │     ║
    - ║     │     ║     │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║ 1   │     ║     │     ║
    - ║     │     ║     │  2  ║
    - ║     │   4 ║ 3   │     ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │     ║     │ 1   ║
    - ║     │  3  ║     │     ║
    - ║     │     ║   4 │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 0
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 3
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 3
        deleteCandidates:
          - 3
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 1
          column: 2
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 1
    actions:
      - position:
          row: 2
          column: 1
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 1
    actions:
      - position:
          row: 2
          column: 1
        deleteCandidates:
          - 1
      - position:
          row: 3
          column: 0
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 2
        deleteCandidates:
          - 4
      - position:
          row: 3
          column: 3
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 1
    actions:
      - position:
          row: 3
          column: 0
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 3
        deleteCandidates:
          - 4
