sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_3_sample_0.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_3_sample_0
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │  2  ║  23 │ 123 │ 123 ║ 1 3 │     │ 1 3 ║
    - ║  8  │ 4 6 │ 456 ║ 4   │  5  │ 4   ║  56 │ 45  │ 456 ║
    - ║     │     │   9 ║ 7   │ 7   │     ║   9 │ 7 9 │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 12  │ 12  │     ║     │ 12  │ 12  ║ 1   │     │ 1   ║
    - ║ 45  │ 4   │  3  ║  6  │  5  │ 4   ║  5  │ 45  │ 45  ║
    - ║   9 │     │     ║     │ 78  │  8  ║  89 │ 789 │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │     │     ║   3 │     │ 1 3 ║     │     │ 1 3 ║
    - ║ 456 │  7  │ 456 ║ 4   │  9  │ 4   ║  2  │ 45  │ 456 ║
    - ║     │     │     ║  8  │     │  8  ║     │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 123 │     │  2  ║  23 │  23 │     ║ 1   │  2  │ 12  ║
    - ║ 4 6 │  5  │ 4 6 ║     │   6 │  7  ║   6 │ 4   │ 4 6 ║
    - ║   9 │     │   9 ║  89 │  8  │     ║  89 │  89 │   9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 123 │ 123 │  2  ║  23 │     │     ║     │  2  │ 12  ║
    - ║   6 │   6 │   6 ║     │  4  │  5  ║  7  │     │   6 ║
    - ║   9 │  8  │   9 ║  89 │     │     ║     │  89 │   9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │  2  │  2  ║     │     │  2  ║
    - ║ 4 6 │ 4 6 │ 4 6 ║  1  │   6 │   6 ║  56 │  3  │ 456 ║
    - ║ 7 9 │  8  │ 7 9 ║     │  8  │  89 ║  89 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  23 │  23 │     ║  23 │  23 │  23 ║   3 │     │     ║
    - ║ 45  │ 4   │  1  ║ 4   │     │ 4   ║  5  │  6  │  8  ║
    - ║ 7   │     │     ║ 7 9 │ 7   │   9 ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  23 │  23 │     ║     │  23 │  23 ║   3 │     │  23 ║
    - ║ 4 6 │ 4 6 │  8  ║  5  │   6 │ 4 6 ║     │  1  │     ║
    - ║ 7   │     │     ║     │ 7   │   9 ║   9 │     │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  23 │     │  2  ║  23 │ 123 │ 123 ║     │  2  │  23 ║
    - ║  56 │  9  │  56 ║     │   6 │   6 ║  4  │  5  │  5  ║
    - ║ 7   │     │ 7   ║ 78  │ 78  │  8  ║     │ 7   │ 7   ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - ""
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │  2  ║  23 │ 123 │ 123 ║ 1 3 │     │ 1 3 ║
    - ║  8  │ 4 6 │ 456 ║ 4   │  5  │ 4   ║  56 │ 45  │ 456 ║
    - ║     │     │   9 ║ 7   │ 7   │     ║   9 │ 7 9 │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 12  │ 12  │     ║     │ 12  │ 12  ║ 1   │     │ 1   ║
    - ║ 45  │ 4   │  3  ║  6  │  5  │ 4   ║  5  │ 45  │ 45  ║
    - ║   9 │     │     ║     │ 78  │  8  ║  89 │ 789 │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │     │     ║   3 │     │ 1 3 ║     │     │ 1 3 ║
    - ║ 456 │  7  │ 456 ║ 4   │  9  │ 4   ║  2  │ 45  │ 456 ║
    - ║     │     │     ║  8  │     │  8  ║     │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 123 │     │  2  ║  23 │  23 │     ║ 1   │  2  │ 12  ║
    - ║ 4 6 │  5  │ 4 6 ║     │   6 │  7  ║   6 │ 4   │ 4 6 ║
    - ║   9 │     │   9 ║  89 │  8  │     ║  89 │  89 │   9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 123 │ 123 │  2  ║  23 │     │     ║     │  2  │ 12  ║
    - ║   6 │   6 │   6 ║     │  4  │  5  ║  7  │     │   6 ║
    - ║   9 │  8  │   9 ║  89 │     │     ║     │  89 │   9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │  2  │  2  ║     │     │  2  ║
    - ║ 4 6 │ 4 6 │ 4 6 ║  1  │   6 │   6 ║  56 │  3  │ 456 ║
    - ║ 7 9 │  8  │ 7 9 ║     │  8  │  89 ║  89 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  23 │  23 │     ║  23 │  23 │  23 ║   3 │     │     ║
    - ║ 45  │ 4   │  1  ║ 4   │     │ 4   ║  5  │  6  │  8  ║
    - ║ 7   │     │     ║ 7 9 │ 7   │   9 ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  23 │  23 │     ║     │  23 │  23 ║   3 │     │  23 ║
    - ║ 4 6 │ 4 6 │  8  ║  5  │   6 │ 4 6 ║     │  1  │     ║
    - ║ 7   │     │     ║     │ 7   │   9 ║   9 │     │ 7 9 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  23 │     │  2  ║  23 │ 123 │ 123 ║     │  2  │  23 ║
    - ║  56 │  9  │  56 ║     │   6 │   6 ║  4  │  5  │  5  ║
    - ║ 7   │     │ 7   ║ 78  │ 78  │  8  ║     │ 7   │ 7   ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions: []
